tests/NormalTests/paczka1/small_fuzzy/75239664.err
Error in line 7: NXzZpBV A116 197,13
Error in line 9: URXtt0a A334 18,4
Error in line 1: NXzZpBV A116 84,3
